--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --detectOpenHandles --forceExit --runInBand --verbose --watchAll",
-    "start": "nodemon app.js"
+    "start": "node ./bin/www"
   },
   "keywords": [],
   "author": "",
