--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "start": "node app.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Achmad Shiddiq A",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
