register, login, add to cart, show cart, remove cart, update cart

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "postgres",
     "password": "postgres",
-    "database": "eCommerceCMS_development",
+    "database": "eCommerce",
     "host": "localhost",
     "dialect": "postgres"
   },
