--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.20.0",
+    "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
+    "sweetalert2": "^10.3.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
