--- a/server/package.json
+++ b/server/package.json
@@ -27,8 +27,10 @@
     "express": "^4.17.1",
     "jest": "^26.4.2",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.4.11",
     "pg": "^8.3.3",
     "sequelize": "^6.3.5",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "xendit-node": "^1.2.0"
   }
 }
