--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "google-auth-library": "^6.0.6",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.4.11",
     "pg": "^8.3.3",
     "sequelize": "^6.3.5"
   }
