--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "sweetalert2": "^10.3.1",
     "vue": "^2.6.11",
+    "vue-google-signin-button-directive": "^1.0.3",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
