--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --detectOpenHandles --forceExit --runInBand --verbose",
-    "dev": "nodemon bin/http.js",
-    "start": "node bin/http.js"
+    "dev": "NODE_ENV=development nodemon app.js",
+    "start": "node app.js && npm install -g sequelize-cli"
   },
   "keywords": [],
   "author": "",
