--- a/server/package.json
+++ b/server/package.json
@@ -27,11 +27,11 @@
     "google-auth-library": "^6.0.6",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.3.3",
-    "sequelize": "^6.3.5",
-    "sequelize-cli": "^6.2.0"
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "jest": "^26.4.2",
+    "sequelize-cli": "^6.2.0",
     "supertest": "^4.0.2"
   }
 }
