--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "NODE_ENV=test jest --detectOpenHandles --verbose --forceExit --runInBand",
-        "dev": "NODE_ENV=development nodemon bin/www",
+        "dev": "NODE_ENV=development nodemon app.js",
         "start": "node app.js"
     },
     "repository": {
